--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Lichen is built by Shamus "Kildorf" Peveril.
     Blog:   http://www.gearleaf.com/
     Git:    https://github.com/speveril/lichen
 
-Free for use and distribtuion by anyone, just don't remove this README when distributing. 
+Free for use and distribution by anyone, just don't remove this README when distributing. 
 
 ----------------------------------------------------------------------------------------------------
 
